--- a/Tips_calculator/styles.css
+++ b/Tips_calculator/styles.css
@@ -4,3 +4,15 @@
     box-sizing: border-box;
 }
 
+.container{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px;
+    border:1px solid #ccc;
+    border-radius:10px;
+    flex-wrap: wrap;
+}
